<resources>
    <string name="app_name">Manager\'s Messenger</string>
    <string name="title_activity_read_and_display_data__java">ReadAndDisplayDataActivity_Java
    </string>
    <string name="schedule_task">Scheduled Task</string>
    <string name="statistics">Statistics</string>

    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="brand_name">Manager\'s Messenger</string>


    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="max_recent_files">Max Recent Files</string>
    <string name="schedule_notification">Schedule Notification</string>
    <string name="schedule_notification_summary">Show notification when scheduled SMS are sent</string>
    <string name="show_estimate">Show Estimate</string>
    <string name="show_estimate_summary">Shows estimate of SMS cost while sending Bulk SMS</string>
    <string name="show_recent_files">Show Recent Files</string>
    <string name="show_recent_files_summary">Display recently uploaded csv files</string>
    <string name="pref_show_recent">pref_show_recent</string>
    <string name="pref_max_recent_files">pref_max_recent_files</string>
    <string name="pref_schedule_notification">pref_schedule_notification</string>
    <string name="pref_show_estimate">pref_show_estimate</string>
    <string name="clickAndUpload">click the button below to upload a csv and get started</string>
    <string name="uploadImageName">clickAndUploadImage</string>
    <string name="sms_action_sent_Activity.RESULT_OK">Activity.RESULT_OK</string>
    <string name="sms_action_sent_SmsManager.RESULT_ERROR_GENERIC_FAILURE">SmsManager.RESULT_ERROR_GENERIC_FAILURE</string>
    <string name="sms_action_sent_SmsManager.RESULT_ERROR_RADIO_OFF">SmsManager.RESULT_ERROR_RADIO_OFF</string>
    <string name="sms_action_sent_SmsManager.RESULT_ERROR_NULL_PDU">SmsManager.RESULT_ERROR_NULL_PDU</string>
    <string name="sms_action_sent_SmsManager.RESULT_ERROR_NO_SERVICE">SmsManager.RESULT_ERROR_NO_SERVICE</string>
    <string name="unknown_error_code">Unknown error code</string>

    <string-array name="pref_max_recent_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

</resources>
